# advent_of_code_2021

./: .flake8  .gitignore  README.md  pyproject.toml
01/: advent01.py  test_advent01.py
02/: advent02.py  test_advent02.py
03/: advent03.py  test_advent03.py
05/: advent05.py  test_advent05.py
06/: advent06.py  advent06_hiperf.py  test_advent06.py  test_advent06_hiperf.py
08/: advent08.py  test_advent08.py
09/: advent09.py  test_advent09.py
10/: advent10.py  test_advent10.py
11/: advent11.py  test_advent11.py
12/: advent12.py  test_advent12.py
advent_of_code_2021/: advent01.py  advent02.py
