[tool.poetry]
name = "advent_of_code_2021"
version = "1.0"
description = "Advent of Code 2021"
authors = ["Markus Straub"]

[tool.poetry.dependencies]
python = "3.9.*"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "^4.0"
pytest = "^6.0"
ipykernel = "^6.6.0"

[tool.pytest.ini_options]
addopts = ["-ra", "-W error"]

[tool.black]
#line-length = 100
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
